# kvstore

./: .gitignore  README.md  cabal.config  kvstore.cabal  package.yaml  stack.yaml
app/: KVService.hs
app/Database/: DatabaseService.hs
app/Kvstore/: Cache.hs  KeyValueService.hs
app/gen-hs/: DB_Client.hs  Db_Consts.hs  KeyValueStore.hs  KeyValueStore_Client.hs  KeyValueStore_Iface.hs
experiments/20tables-100keys/: Script.hs  results.json
experiments/20tables-100keys-tuned/: Script.hs  results.json
experiments/lazy-ser/: Script.hs
experiments/preloaded/: Script.hs
experiments/reads-only/: Script.hs
experiments/sbfm-scale-batch-size/: Script.hs  results.json
experiments/single-batch/: Script.hs  results.json
experiments/smaller-data/: Script.hs  results.json
kvs-exe/: KVService.hs
microbench/: Microbenchmark.hs
microbench/Data/Statistics/: Chart.hs
microbench/Microbenchmark/: Pipeline.hs  Profile.hs
plotting/data/: gc-bench.json
plotting/src/: gc-bench.py
service-config/: Requests.hs
src/: LazyObject.hs  MBConfig.hs  Versions.hs
src/Database/: DatabaseService.hs
src/Kvstore/: Cache.hs  InputOutput.hs  JSONSerialization.hs  KVSTypes.hs  KeyValueService.hs  RequestHandling.hs  Serialization.hs
src/Kvstore/Ohua/: Cache.hs  KVSTypes.hs  KeyValueService.hs  RequestHandling.hs
src/Kvstore/Ohua/FBM/: Cache.hs  KVSTypes.hs  KeyValueService.hs  RequestHandling.hs
src/Kvstore/Ohua/SBFM/: Cache.hs  KVSTypes.hs  KeyValueService.hs  RequestHandling.hs
test/: CorrectnessTests.hs  Crypto.hs  KvserviceTest.hs  LazyTable.hs  MBConfig.hs  Microbenchmark.hs  Requests.hs  ServiceConfig.hs  TestSetup.hs  Versions.hs  calc_size.hs  lazy_deser.hs
test/Microbenchmark/: Common.hs  KVStore.hs  Pipeline.hs  Profile.hs
thrift/: db.thrift
thrift/gen-hs/: DB.hs  DB_Client.hs  DB_Iface.hs  Db_Types.hs  KeyValueStore_Client.hs  Kvservice_Consts.hs  Kvservice_Types.hs
