name:                kvstore
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sertel/kvstore#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Ertel
maintainer:          sebastian.ertel@gmail.com
copyright:           2018 Sebastian Ertel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, thrift/gen-hs
  exposed-modules:     Kvstore.KeyValueService
                     , Kvstore.Cache
                     , Kvstore.KVSTypes
                     , Database.DatabaseService
                     , KeyValueStore
                     , KeyValueStore_Iface
  other-modules:       KeyValueStore_Client
                     , Kvservice_Consts
                     , Kvservice_Types
                     , DB
                     , DB_Iface
                     , DB_Client
                     , Db_Consts
                     , Db_Types
  build-depends:       base
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-language:    Haskell2010


executable kv-service-exe
  hs-source-dirs:      kvs-exe
  main-is:             KVService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  build-depends:       base
                     , kvstore
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
  default-language:    Haskell2010

executable db-service-exe
  hs-source-dirs:      db-exe
  main-is:             DBService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  build-depends:       base
                     , kvstore
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
  default-language:    Haskell2010

test-suite kvstore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             KvserviceTest.hs
  build-depends:       base
                     , kvstore
                     , mtl
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-ds -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/sertel/kvstore.git
