name:                kvstore
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sertel/kvstore#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Ertel
maintainer:          sebastian.ertel@gmail.com
copyright:           2018 Sebastian Ertel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, thrift/gen-hs
  exposed-modules:     Kvstore.KeyValueService
                     , Kvstore.Cache
                     , Kvstore.KVSTypes
                     , Kvstore.Ohua.Cache
                     , Kvstore.Ohua.KeyValueService
                     , Kvstore.Ohua.KVSTypes
                     , Kvstore.Ohua.FBM.Cache
                     , Kvstore.Ohua.FBM.KeyValueService
                     , Kvstore.Ohua.SBFM.Cache
                     , Kvstore.Ohua.SBFM.KeyValueService
                     , Kvstore.RequestHandling
                     , Kvstore.Ohua.RequestHandling
                     , Kvstore.Ohua.FBM.RequestHandling
                     , Kvstore.Ohua.SBFM.RequestHandling
                     , Kvstore.Ohua.SBFM.KVSTypes
                     , Kvservice_Types
                     , Database.DatabaseService
                     , KeyValueStore
                     , KeyValueStore_Iface
                     , Kvstore.Serialization
                     , DB_Iface
                     , Db_Types
                     , Kvstore.InputOutput
                     , MBConfig
                     , Versions
  other-modules:       KeyValueStore_Client
                     , Kvservice_Consts
                     , DB
                     , DB_Client
                     , Db_Consts
  build-depends:       base
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
                     , aeson
                     , statefulness
                     , deepseq
                     , lens
  ghc-options:         -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-language:    Haskell2010


executable kv-service-exe
  hs-source-dirs:      kvs-exe
  main-is:             KVService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  build-depends:       base
                     , kvstore
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
  default-language:    Haskell2010

executable db-service-exe
  hs-source-dirs:      db-exe
  main-is:             DBService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  build-depends:       base
                     , kvstore
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , thrift
                     , vector
                     , QuickCheck
                     , bytestring
  default-language:    Haskell2010

test-suite kvstore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             KvserviceTest.hs
  other-modules:       ServiceConfig
                     , Requests
                     , CorrectnessTests
                     , Crypto
  build-depends:       base
                     , kvstore
                     , mtl
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , text
                     , unordered-containers
                     , vector
                     , random
                     , lens
                     , time
                     , statistics
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , zlib
                     , cryptonite
                     , deepseq
                     , memory
                     , containers
                     , binary
                     , binary-orphans
                     , cereal
                     , cereal-text
                     , hashable
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-to-file -ddump-ds -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dsuppress-type-applications -dsuppress-coercions -dsuppress-module-prefixes  -dsuppress-idinfo
  default-language:    Haskell2010

executable microbench
  main-is: Microbenchmark.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -O2
  default-language: Haskell2010
  build-depends:   base
                 , kvstore
                 , aeson
                 , bytestring
                 , lens
                 , time
                 , statistics
                 , text
                 , cryptonite
                 , zlib
                 , deepseq
                 , unordered-containers
                 , memory
                 , mtl
                 , vector
                 , random
                 , containers
                 , binary
                 , binary-orphans
                 , cereal
                 , hashable
                 , cereal-text
                 , MonadRandom
                 , statefulness
                 , rdtsc
  other-modules:   Crypto
                 , Requests
                 , ServiceConfig



source-repository head
  type:     git
  location: https://github.com/sertel/kvstore.git
